Ajouter option de ajouter et supprimer

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@uiw/react-color": "^2.4.1",
+    "@uiw/react-color-colorful": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
